--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -24,6 +24,7 @@
     "jspdf": "^3.0.1",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.503.0",
     "nodemon": "^3.1.4",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
